--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -33,7 +33,7 @@ a {
 }
 
 a:hover, a:focus {
-    color: #7b7b7b;
+    color: #003a0f;
     text-decoration: none;
     outline: 0;
 }
@@ -45,6 +45,26 @@ hr {
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
+}
+
+.input-text {
+    /*width:  200px;*/
+    height: 45px;
+    padding: 5px 10px 5px 10px;
+    font-size:20px;
+    margin-top: 10px;
+}
+.select-input{
+    color: #999999;
+    height: 45px;
+    font-size:20px;
+    border-radius: .5rem;
+}
+
+.btn-file{
+    margin-top: 5px;
+    position: relative;
+    overflow: hidden;
 }
 
 .navbar {
@@ -79,15 +99,6 @@ hr {
     background-size: cover;
 }
 
-.price-box{
-    background: #dec942;
-}
-
-
-.right-box{
-    margin-left: 40%;
-}
-
 .title {
     margin-top: 100px;
     color: #333;
@@ -117,13 +128,13 @@ hr {
     padding-bottom: 20px;
 }
 
-.footer i {
+.footer span {
     color: white;
     font-size: 30px;
     padding: 20px;
 }
 
-.footer i:hover {
+.footer span:hover {
     color: #003a0f;
 }
 
@@ -147,6 +158,58 @@ hr {
     margin-bottom: 15px;
 }
 
+.btn-edit {
+    font-weight: 500;
+    color: #000000;
+    background-color: #f5f5f5;
+    border-color: #333333;
+}
+
+.btn-edit:focus,
+.btn-edit.focus {
+    color: #000000;
+    background-color: #f5f5f5;
+    border-color: #333333;
+}
+
+.btn-edit:hover {
+
+    color: #000000;
+    background-color: #d6d6d6;
+    border-color: #333333;
+}
+.btn-edit span{
+    color: #333333;
+}
+
+.navbar-footer-content {
+    padding: 15px;
+    padding-bottom: 0;
+    background: #dbffd5;
+}
+
+.big-photo {
+    max-height: 320px;
+    width: auto
+}
+
+.navbar-content {
+    width: 320px;
+    padding: 15px;
+    padding-bottom: 0;
+    background: #dbffd5;
+}
+
+.non-marker {
+    margin-left: 0;
+    padding-left: 0;
+    /*margin-top: -35px;*/
+}
+
+.non-marker > li {
+    list-style-type: none;
+}
+
 /*****************************************************************/
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
@@ -167,7 +230,7 @@ hr {
 }
 
 .navbar-default .navbar-nav > li > .dropdown-menu {
-    background-color: #108d19;
+    background: #dbffd5;
 }
 
 .navbar-default .navbar-nav > li > .dropdown-menu > li > a {
