[#34] Refactor Design Page, plus minor changes in UserPage

--- a/src/main/webapp/WEB-INF/views/DesignPage.html
+++ b/src/main/webapp/WEB-INF/views/DesignPage.html
@@ -26,9 +26,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Great<i class="fa fa-rocket fa-lg" aria-hidden="true">
+            <a class="navbar-brand" href="#">Great<span class="fa fa-rocket fa-lg" aria-hidden="true">
                 <text/>
-            </i>Start</a>
+            </span>Start</a>
         </div>
         <div class="collapse navbar-collapse" id="responsive-menu">
             <ul class="nav navbar-nav navbar-left">
@@ -63,7 +63,7 @@
 <div class="container column-wrap">
     <div class="row centered">
         <div class="col-lg-4 col-md-4 col-sm-4">
-            <i class="fa fa-lightbulb-o fa-3x"></i>
+            <span class="fa fa-lightbulb-o fa-3x"></span>
             <h4>Ideas</h4>
             <div><strong>Just Text Example</strong></div>
             <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
-            <i class="glyphicon glyphicon glyphicon-grain gi-3x"></i>
+            <span class="glyphicon glyphicon glyphicon-grain gi-3x"></span>
             <h4>Help</h4>
             <div><strong>Just Text Example</strong></div>
             <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
-            <i class="fa fa-users fa-3x"></i>
+            <span class="fa fa-users fa-3x"></span>
             <h4>Projects</h4>
             <div><strong>Just Text Example</strong></div>
             <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -121,11 +121,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
+                            <div><span class="fa fa-dollar"></span>100000</div>
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                            <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
                         </div>
                     </div>
                 </div>
@@ -149,11 +149,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
+                            <div><span class="fa fa-dollar"></span>100000</div>
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                            <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
                         </div>
                     </div>
                 </div>
@@ -176,11 +176,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
+                            <div><span class="fa fa-dollar"></span>100000</div>
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                            <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
                         </div>
                     </div>
                 </div>
@@ -203,11 +203,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
+                            <div><span class="fa fa-dollar"></span>100000</div>
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                            <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
                         </div>
                     </div>
                 </div>
@@ -291,9 +291,9 @@
 <div class="footer">
     <div class="container">
         <div class="row centered">
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-vk"></i></a>
+            <a href="#"><span class="fa fa-twitter"></span></a>
+            <a href="#"><span class="fa fa-facebook"></span></a>
+            <a href="#"><span class="fa fa-vk"></span></a>
 
         </div>
     </div>
@@ -306,7 +306,7 @@
             <div class="modal-header">
                 <h4 class="modal-title">Registration
                     <button class="close" type="button" data-dismiss="modal">
-                        <i class="fa fa-close"></i>
+                        <span class="fa fa-close"></span>
                     </button>
                 </h4>
 
@@ -323,7 +323,7 @@
 
                     <form action="/registration">
                         <button class="btn btn-primary" type="submit">
-                            <i class="fa fa-user-circle-o"></i> Create an account
+                            <span class="fa fa-user-circle-o"></span> Create an account
                         </button>
                     </form>
 
