--- a/src/main/webapp/WEB-INF/views/UserPage.html
+++ b/src/main/webapp/WEB-INF/views/UserPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,7 +29,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">Great<span class="fa fa-rocket fa-lg" aria-hidden="true">
-                <text/>
+                <text></text>
             </span>Start</a>
         </div>
         <div class="collapse navbar-collapse" id="responsive-menu">
