--- a/src/main/webapp/WEB-INF/views/DesignPage.html
+++ b/src/main/webapp/WEB-INF/views/DesignPage.html
@@ -11,12 +11,71 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-
+    <link href="css/menu.css" rel="stylesheet">
+	
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.js"></script>
+	
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
+	<div id="wrapper">
+        <div class="overlay"></div>
+        <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+            <ul class="nav sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                       Menu
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Events</a>
+                </li>
+                <li>
+                    <a href="#">Investments</a>
+                </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown-header">Dropdown heading</li>
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li><a href="#">Separated link</a></li>
+                    <li><a href="#">One more separated link</a></li>
+                  </ul>
+                </li>
+                <li>
+                    <a href="#">Interests</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/maridlcrmn">Follow me</a>
+                </li>
+            </ul>
+        </nav>
+		
+        <div id="page-content-wrapper">
+            <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
+                <span class="hamb-top"></span>
+    			<span class="hamb-middle"></span>
+				<span class="hamb-bottom"></span>
+            </button>
+            
+        </div>
+    </div>
+
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -26,9 +85,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Great<i class="fa fa-rocket fa-lg" aria-hidden="true">
+            <a class="navbar-brand" href="#">Great<span class="fa fa-rocket fa-lg" aria-hidden="true">
                 <text/>
-            </i>Start</a>
+            </span>Start</a>
         </div>
         <div class="collapse navbar-collapse" id="responsive-menu">
             <ul class="nav navbar-nav navbar-left">
@@ -63,7 +122,7 @@
 <div class="container column-wrap">
     <div class="row centered">
         <div class="col-lg-4 col-md-4 col-sm-4">
-            <i class="fa fa-lightbulb-o fa-3x"></i>
+            <span class="fa fa-lightbulb-o fa-3x"></span>
             <h4>Ideas</h4>
             <div><strong>Just Text Example</strong></div>
             <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -73,7 +132,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
-            <i class="glyphicon glyphicon glyphicon-grain gi-3x"></i>
+            <span class="glyphicon glyphicon glyphicon-grain gi-3x"></span>
             <h4>Help</h4>
             <div><strong>Just Text Example</strong></div>
             <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -83,7 +142,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
-            <i class="fa fa-users fa-3x"></i>
+            <span class="fa fa-users fa-3x"></span>
             <h4>Projects</h4>
             <div><strong>Just Text Example</strong></div>
             <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -121,11 +180,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
+                            <div><span class="fa fa-dollar"></span>100000</div>
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                            <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
                         </div>
                     </div>
                 </div>
@@ -149,11 +208,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
+                            <div><span class="fa fa-dollar"></span>100000</div>
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                            <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
                         </div>
                     </div>
                 </div>
@@ -176,11 +235,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
+                            <div><span class="fa fa-dollar"></span>100000</div>
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                            <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
                         </div>
                     </div>
                 </div>
@@ -203,11 +262,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div>min</div>
-                            <div><i class="fa fa-dollar"></i>100000</div>
+                            <div><span class="fa fa-dollar"></span>100000</div>
                         </div>
                         <div class="col-xs-6">
                             <div class="right-box">Still needed</div>
-                            <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                            <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
                         </div>
                     </div>
                 </div>
@@ -291,9 +350,9 @@
 <div class="footer">
     <div class="container">
         <div class="row centered">
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-vk"></i></a>
+            <a href="#"><span class="fa fa-twitter"></span></a>
+            <a href="#"><span class="fa fa-facebook"></span></a>
+            <a href="#"><span class="fa fa-vk"></span></a>
 
         </div>
     </div>
@@ -306,7 +365,7 @@
             <div class="modal-header">
                 <h4 class="modal-title">Registration
                     <button class="close" type="button" data-dismiss="modal">
-                        <i class="fa fa-close"></i>
+                        <span class="fa fa-close"></span>
                     </button>
                 </h4>
 
@@ -323,7 +382,7 @@
 
                     <form action="/registration">
                         <button class="btn btn-primary" type="submit">
-                            <i class="fa fa-user-circle-o"></i> Create an account
+                            <span class="fa fa-user-circle-o"></span> Create an account
                         </button>
                     </form>
 
@@ -340,5 +399,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/salvattore.min.js"></script>
+<script src="js/menu.js"></script>
 </body>
 </html>
