[#42] Develop site menu - v02

--- a/src/main/webapp/WEB-INF/views/DesignPage.html
+++ b/src/main/webapp/WEB-INF/views/DesignPage.html
@@ -9,6 +9,7 @@
 
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/card.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/menu.css" rel="stylesheet">
@@ -22,7 +23,7 @@
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
-	<div id="wrapper">
+	<div class="wrapper" id="wrapper">
         <div class="overlay"></div>
         <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
             <ul class="nav sidebar-nav">
@@ -61,7 +62,7 @@
                     <a href="#">Contact</a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/maridlcrmn">Follow me</a>
+                    <a href="#">Follow me</a>
                 </li>
             </ul>
         </nav>
@@ -400,5 +401,7 @@
 <script src="js/bootstrap.js"></script>
 <script src="js/salvattore.min.js"></script>
 <script src="js/menu.js"></script>
+<script src="js/slide-down.js"></script>
+<script src="js/colored-div.js"></script>
 </body>
 </html>
