--- a/src/main/webapp/WEB-INF/views/DesignPage.html
+++ b/src/main/webapp/WEB-INF/views/DesignPage.html
@@ -23,8 +23,7 @@
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
 	<div class="wrapper" id="wrapper">
-        <div class="overlay"></div>
-        <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+        <nav class="navbar navbar-fixed-top" id="sidebar-wrapper" role="navigation">
             <ul class="nav sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
