[#62] Create 403 page + [#59] Create 404 page - v02

--- a/src/main/webapp/WEB-INF/views/404Error.html
+++ b/src/main/webapp/WEB-INF/views/404Error.html
@@ -23,9 +23,9 @@
 	    </div>
 	    <div class="error-actions">
 		<a href="DesignPage.html" class="btn btn-primary">
-		    <i class="icon-home icon-white"></i> Take Me Home </a>
+		    <span class="icon-home icon-white"></span> Take Me Home </a>
 		<a href="ContactSupport.html" class="btn btn-default">
-		    <i class="icon-envelope"></i> Contact Support </a>
+		    <span class="icon-envelope"></span> Contact Support </a>
 	    </div>
 	</div>
     </div>
