--- a/src/main/webapp/WEB-INF/views/403Error.html
+++ b/src/main/webapp/WEB-INF/views/403Error.html
@@ -19,13 +19,13 @@
 		<h1>Oops!</h1>
 	    <h2>403 Forbidden</h2>
 	    <div class="error-details">
-		Access to this resource is denied!<br>
+				Access to this resource is denied!<br>
 	    </div>
 	    <div class="error-actions">
 		<a href="DesignPage.html" class="btn btn-primary">
-		    <i class="icon-home icon-white"></i> Take Me Home </a>
+		    <span class="icon-home icon-white"></span> Take Me Home </a>
 		<a href="ContactSupport.html" class="btn btn-default">
-		    <i class="icon-envelope"></i> Contact Support </a>
+		    <span class="icon-envelope"></span> Contact Support </a>
 	    </div>
 	</div>
     </div>
