[#62] Create 403 page + [#59] Create 404 page - v03

--- a/src/main/webapp/WEB-INF/views/ContactSupport.html
+++ b/src/main/webapp/WEB-INF/views/ContactSupport.html
@@ -94,9 +94,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Great<i class="fa fa-rocket fa-lg" aria-hidden="true">
+            <a class="navbar-brand" href="#">Great<span class="fa fa-rocket fa-lg" aria-hidden="true">
                 <text/>
-            </i>Start</a>
+            </span>Start</a>
         </div>
         <div class="collapse navbar-collapse" id="responsive-menu">
             <ul class="nav navbar-nav navbar-left">
@@ -163,7 +163,7 @@
             <div class="modal-header">
                 <h4 class="modal-title">Registration
                     <button class="close" type="button" data-dismiss="modal">
-                        <i class="fa fa-close"></i>
+                        <span class="fa fa-close"></span>
                     </button>
                 </h4>
 
@@ -180,7 +180,7 @@
 
                     <form action="/registration">
                         <button class="btn btn-primary" type="submit">
-                            <i class="fa fa-user-circle-o"></i> Create an account
+                            <span class="fa fa-user-circle-o"></span> Create an account
                         </button>
                     </form>
 
