--- a/src/main/webapp/WEB-INF/views/InvestmentPage.html
+++ b/src/main/webapp/WEB-INF/views/InvestmentPage.html
@@ -12,28 +12,28 @@
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/menu.css" rel="stylesheet">
-	
+
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.js"></script>
-	
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.js"></script>
+
     <style type="text/css">
         .pagination>li>a, .pagination>li>span { border-radius: 50% !important;margin: 0 5px;}
     </style>
-	
+
 </head>
 
 <body >
 <div class="navbar navbar-default navbar-fixed-top">
-	<div class="wrapper" id="wrapper" >
-    
+    <div class="wrapper" id="wrapper" >
+
         <!-- Sidebar -->
         <nav class="navbar navbar-fixed-top" id="sidebar-wrapper" role="navigation">
             <ul class="nav sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                       Menu
+                        Menu
                     </a>
                 </li>
                 <li>
@@ -49,17 +49,17 @@
                     <a href="#">Investments</a>
                 </li>
                 <li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <span class="caret"></span></a>
 
-                  <ul class="dropdown-menu" role="menu">
-                    <li class="dropdown-header">Dropdown heading</li>
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
-				  
+                    <ul class="dropdown-menu" role="menu">
+                        <li class="dropdown-header">Dropdown heading</li>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+
                 </li>
                 <li>
                     <a href="#">Interests</a>
@@ -78,15 +78,15 @@
         <div id="page-content-wrapper">
             <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
                 <span class="hamb-top"></span>
-    			<span class="hamb-middle"></span>
-				<span class="hamb-bottom"></span>
+                <span class="hamb-middle"></span>
+                <span class="hamb-bottom"></span>
             </button>
-            
+
         </div>
         <!-- /#page-content-wrapper -->
 
     </div>
-	
+
     <div class="container">
 
         <div class="navbar-header">
@@ -100,7 +100,7 @@
             <a class="navbar-brand" href="#">Great<i class="fa fa-rocket fa-lg" aria-hidden="true">
                 <text/>
             </i>Start</a>
-		</div>
+        </div>
         <div class="collapse navbar-collapse" id="responsive-menu">
             <ul class="nav navbar-nav navbar-left">
                 <li class="active"><a href="#">Home</a></li>
@@ -121,11 +121,54 @@
 
 <div class="container">
     <div data-columns>
-        <div class="item">
+        <div class="row masonry" >
             <div class="thumbnail">
                 <div class="caption centered">
-					<a href="#"><h3>Investment name</h3></a>
-					<hr>
+                    <a href="#"><h3>Investment name</h3></a>
+                    <hr>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+
+                    <!-- PRICE ITEM -->
+                    <div class="panel price panel-red">
+                        <div class="panel-heading  text-center">
+                            <h3>Min investment $10000</h3>
+                        </div>
+                        <div class="panel-body text-center">
+                            <p class="lead" style="font-size:40px"><h2>Total amount we need $1000000</h2></p>
+                        </div>
+                        <ul class="list-group list-group-flush text-center">
+                            <li class="list-group-item"><i class="icon-ok text-danger"></i> Personal use</li>
+                        </ul>
+                        <div class="panel-footer">
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-1">I want to invest</button>
+                            <!--Modal-->
+                            <div class="modal fade" id="modal-1">
+                                <div class="modal-dialog">
+                                    <div class="modal-content ">
+                                        <div class="modal-header">
+                                            <button class="close" type="button" data-dismiss="modal">
+                                                <i class="fa fa-close"></i>
+                                            </button>
+                                            <h4 class="modal-title">Modal title</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p>This is modal window</p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button class="btn btn-danger" type="button" data-dismiss="modal">Cancel</button>
+                                            <a href="#" class="btn btn-success" type="submit">Submit</a>
+                                            <div class="modal-content">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /PRICE ITEM -->
+
+
                 </div>
                 <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                 <div class="caption">
@@ -133,35 +176,36 @@
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                         ut
+                        aliquip ex ea commodo consequat. </p>
+                    <hr>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="item">
+            <div class="thumbnail">
+                <div>
+                    <a href="#"><h3>About this investment</h3></a>
+                    <hr>
+                </div>
+                <div class="caption">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
                         aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                         cillum dolore eu fugiat nulla pariatur.</p>
                     <hr>
                 </div>
-
             </div>
         </div>
         <div class="item">
             <div class="thumbnail">
                 <div>
-                    <a href="#"><h3>About this investment</h3></a>
-					<hr>
-                </div>
-                <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <hr>
-                </div>
-            </div>
-        </div>
-		<div class="item">
-            <div class="thumbnail">
-                <div>
                     <a href="#"><h3>Current state</h3></a>
-					<hr>
+                    <hr>
                 </div>
                 <div class="caption">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -174,11 +218,11 @@
                 </div>
             </div>
         </div>
-		<div class="item">
+        <div class="item">
             <div class="thumbnail">
                 <div>
                     <a href="#"><h3>Potential</h3></a>
-					<hr>
+                    <hr>
                 </div>
                 <div class="caption">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -191,11 +235,11 @@
                 </div>
             </div>
         </div>
-		<div class="item">
+        <div class="item">
             <div class="thumbnail">
                 <div>
                     <a href="#"><h3>Competitors</h3></a>
-					<hr>
+                    <hr>
                 </div>
                 <div class="caption">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -208,11 +252,11 @@
                 </div>
             </div>
         </div>
-		<div class="item">
+        <div class="item">
             <div class="thumbnail">
                 <div>
                     <a href="#"><h3>Benefits</h3></a>
-					<hr>
+                    <hr>
                 </div>
                 <div class="caption">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -225,11 +269,11 @@
                 </div>
             </div>
         </div>
-		<div class="item">
+        <div class="item">
             <div class="thumbnail">
                 <div>
                     <a href="#"><h3>Bussiness model</h3></a>
-					<hr>
+                    <hr>
                 </div>
                 <div class="caption">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -242,11 +286,11 @@
                 </div>
             </div>
         </div>
-		<div class="item">
+        <div class="item">
             <div class="thumbnail">
                 <div>
                     <a href="#"><h3>Risks</h3></a>
-					<hr>
+                    <hr>
                 </div>
                 <div class="caption">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -259,40 +303,9 @@
                 </div>
             </div>
         </div>
+
     </div>
-	<div data-columns>
-	    <div class="item">
-            <div class="thumbnail">
-                <div class="caption centered">
-                    <a href="#"><h3>Min investment $10000</h3></a>
-                </div>
-                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-1">I want to invest</button>
-				<!--Modal-->
-				<div class="modal fade" id="modal-1">
-					<div class="modal-dialog">
-						<div class="modal-content ">
-							<div class="modal-header">
-								<button class="close" type="button" data-dismiss="modal">
-									<i class="fa fa-close"></i>
-								</button>
-								<h4 class="modal-title">Modal title</h4>
-							</div>
-							<div class="modal-body">
-								<p>This is modal window</p>
-							</div>
-							<div class="modal-footer">
-								<button class="btn btn-danger" type="button" data-dismiss="modal">Cancel</button>
-								<a href="#" class="btn btn-success" type="submit">Submit</a>
-								<div class="modal-content">
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-            </div>
-			
-        </div>
-	</div>
+
 </div>
 
 <div class="footer">
