--- a/src/main/webapp/WEB-INF/views/ProjectPage.html
+++ b/src/main/webapp/WEB-INF/views/ProjectPage.html
@@ -8,10 +8,10 @@
 	<title>Project Page</title>
 
 	<link rel="shortcut icon" href="../../resources/img/favicon.png" type="image/x-icon">
-	<link href="../../resources/css/bootstrap.css" rel="stylesheet">
-	<link href="../../resources/css/font-awesome.css" rel="stylesheet">
-	<link href="../../resources/css/main.css" rel="stylesheet">
-	<link href="../../resources/css/menu.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/font-awesome.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
+	<link href="css/menu.css" rel="stylesheet">
 
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -342,17 +342,24 @@
 
 </div>
 <!--Modal-->
-<div class="modal fade" id="modal-1">
+<div class="modal fade" id="modal-invest">
 	<div class="modal-dialog">
 		<div class="modal-content ">
 			<div class="modal-header">
 				<button class="close" type="button" data-dismiss="modal">
 					<i class="fa fa-close"></i>
 				</button>
-				<h4 class="modal-title">Modal title</h4>
+				<h4 class="modal-title">Invest in ProjectName</h4>
 			</div>
 			<div class="modal-body">
-				<p>This is modal window</p>
+				<p>This page allows you to create a request for investment to ProjectName.</p>
+					<p>Please, select preferred amount of investment.</p>
+					<p>Minimal investment:</p>
+					<p>Total investment needed:</p>
+					<p>Invested in project:</p>
+
+					<p>Your investment amount</p>
+					<p>Shortly our managers will contact you</p>
 			</div>
 			<div class="modal-footer">
 				<button class="btn btn-danger" type="button" data-dismiss="modal">Cancel</button>
