Some modal window fix

--- a/src/main/webapp/WEB-INF/views/ProjectPage.html
+++ b/src/main/webapp/WEB-INF/views/ProjectPage.html
@@ -8,10 +8,10 @@
 	<title>Project Page</title>
 
 	<link rel="shortcut icon" href="../../resources/img/favicon.png" type="image/x-icon">
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/font-awesome.css" rel="stylesheet">
-	<link href="css/main.css" rel="stylesheet">
-	<link href="css/menu.css" rel="stylesheet">
+	<link href="../../resources/css/bootstrap.css" rel="stylesheet">
+	<link href="../../resources/css/font-awesome.css" rel="stylesheet">
+	<link href="../../resources/css/main.css" rel="stylesheet">
+	<link href="../../resources/css/menu.css" rel="stylesheet">
 
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
