--- a/src/main/webapp/resources/views/Main.html
+++ b/src/main/webapp/resources/views/Main.html
@@ -1,3 +1,5 @@
+<link href="css/card.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet">
 <div class="header-wrap">
     <div class="container">
         <div class="row centered">
