--- a/src/main/webapp/resources/views/UserPage.html
+++ b/src/main/webapp/resources/views/UserPage.html
@@ -1,3 +1,5 @@
+<link href="css/card.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet">
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
