angular first samples

--- a/src/main/resources/public/views/main/Main.html
+++ b/src/main/resources/public/views/main/Main.html
@@ -56,9 +56,9 @@
             <div class="item">
                 <div class="thumbnail">
                     <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
+                        <a href="#!/project"><h3>Project name</h3></a>
                     </div>
-                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <a href="#!/project"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                     <div class="caption">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore
@@ -88,9 +88,9 @@
             <div class="item">
                 <div class="thumbnail">
                     <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
+                        <a href="#!/project"><h3>Project name</h3></a>
                     </div>
-                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <a href="#!/project"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                     <div class="caption">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore
@@ -119,9 +119,9 @@
             <div class="item">
                 <div class="thumbnail">
                     <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
+                        <a href="#!/project"><h3>Project name</h3></a>
                     </div>
-                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <a href="#!/project"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                     <div class="caption">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore
@@ -150,9 +150,9 @@
             <div class="item">
                 <div class="thumbnail">
                     <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
+                        <a href="#!/project"><h3>Project name</h3></a>
                     </div>
-                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <a href="#!/project"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                     <div class="caption">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore
@@ -192,9 +192,9 @@
             <div class="item">
                 <div class="thumbnail">
                     <div class="caption centered">
-                        <a href="#"><h3>Event name</h3></a>
+                        <a href="#!/event"><h3>Event name</h3></a>
                     </div>
-                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <a href="#!/event"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                     <div class="caption">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore
@@ -213,9 +213,9 @@
             <div class="item">
                 <div class="thumbnail">
                     <div class="caption centered">
-                        <a href="#"><h3>Event name</h3></a>
+                        <a href="#!/event"><h3>Event name</h3></a>
                     </div>
-                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <a href="#!/event"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                     <div class="caption">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore
@@ -234,9 +234,9 @@
             <div class="item">
                 <div class="thumbnail">
                     <div class="caption centered">
-                        <a href="#"><h3>Event name</h3></a>
+                        <a href="#!/event"><h3>Event name</h3></a>
                     </div>
-                    <a href="#"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                    <a href="#!/event"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                     <div class="caption">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore
