--- a/src/main/resources/static/views/event/Events.html
+++ b/src/main/resources/static/views/event/Events.html
@@ -2,15 +2,4 @@
     <h1>Here must be page with EVENTS</h1>
 </div>
 
-<div id="footer">
-    <div class="footer">
-        <div class="container">
-            <div class="row centered">
-                <a href="#"><span class="fa fa-twitter"></span></a>
-                <a href="#"><span class="fa fa-facebook"></span></a>
-                <a href="#"><span class="fa fa-vk"></span></a>
-
-            </div>
-        </div>
-    </div>
-</div>
+<div ng-include="'views/main/Footer.html'"></div>
