angular first samples

--- a/src/main/resources/static/views/user/UserPage.html
+++ b/src/main/resources/static/views/user/UserPage.html
@@ -148,7 +148,7 @@
                                 <div class="container col-md-4 col-xs-12">
                                     <div class="card">
                                         <a href="#"><img ng-src="https://goo.gl/e7PZpL"
-                                                         class="card-img-top img-responsive"></a>
+                                                         class="card-img-top img-responsive" alt="ProjectPhoto"></a>
                                         <div class="card-block">
                                             <a href="#"><h4 class="card-title">Artificial Intelligence A-Z™: Learn How
                                                 To
