[#53] Develop "add/edit entity" template + pages(removed align attribute in teg "<p>")

--- a/src/main/webapp/WEB-INF/views/addPages/add_investment.html
+++ b/src/main/webapp/WEB-INF/views/addPages/add_investment.html
@@ -63,11 +63,11 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <div class="text-center">
-                                <p align="center">Here you can add you investment in <u>Project</u></p>
-                                <p align="center">Total investment needed: <u>100000</u>
+                                <p>Here you can add you investment in <u>Project</u></p>
+                                <p>Total investment needed: <u>100000</u>
                                     <span class="fa fa-usd" aria-hidden="true"></span>
                                 </p>
-                                <p align="center">Minimal investment: <u>5000</u>
+                                <p>Minimal investment: <u>5000</u>
                                     <span class="fa fa-usd" aria-hidden="true"></span>
                                 </p>
 
